// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition composed style 1`] = `
<View
  style={
    Array [
      Object {
        "height": 100,
        "width": 200,
      },
      Object {
        "margin": 8,
        "padding": 16,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;

exports[`composition composed style 2`] = `
<View
  style={
    Array [
      Object {
        "height": 200,
        "width": 400,
      },
      Object {
        "margin": 8,
        "padding": 16,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;

exports[`composition composed style with theme vars 1`] = `
<View
  style={
    Array [
      Object {
        "height": 100,
        "width": 200,
      },
      Object {
        "margin": 8,
        "padding": 16,
      },
      Object {
        "backgroundColor": "blue",
      },
    ]
  }
/>
`;

exports[`composition composed style with theme vars 2`] = `
<View
  style={
    Array [
      Object {
        "height": 200,
        "width": 400,
      },
      Object {
        "margin": 8,
        "padding": 16,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
/>
`;
